objects/ASI_CRM_CN_Channel_Strategy_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority 1</fullName>
                </value>
                <value>
                    <fullName>Priority 2</fullName>
                </value>
                <value>
                    <fullName>Priority 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Strategy__c</fullName>
        <label>Channel Strategy</label>
        <referenceTo>ASI_CRM_CN_Channel_Strategy__c</referenceTo>
        <relationshipLabel>Channel Strategy Line Item</relationshipLabel>
        <relationshipName>Channel_Strategy_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_National_Strategy_Sub_Brand__c</fullName>
        <formula>ASI_CRM_CN_National_Strategy__r.ASI_CRM_CN_Sub_brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Strategy Sub Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_National_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Strategy</label>
        <referenceTo>ASI_CRM_CN_Channel_Strategy_Line_Item__c</referenceTo>
        <relationshipLabel>Channel Strategy Line Item</relationshipLabel>
        <relationshipName>Channel_Strategy_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_FOC_CN_Sub_brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Channel Strategy Line Item</relationshipLabel>
        <relationshipName>Channel_Strategy_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel Strategy Line Item</label>
    <nameField>
        <label>Channel Strategy Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Strategy Line Item</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Channel_Strategy</fullName>
        <active>true</active>
        <label>CN Channel Strategy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>